tests/test-check-lambda.m31.ref
File "./test-check-lambda.m31", line 12, characters 26-27: Syntax error
  Unexpected: :
