tests/test-check-lambda.m31
(* Testing checking for lambdas in various ways. *)

Parameter A : Type.
Parameter B : A -> Type.
Parameter C : forall x : A, B x -> Type.
Parameter f : forall x : A, B x.
Parameter g : forall (x : A) (y : B x), C x y.

Parameter a : A.

Check
  (fun y : B a => g a y) : forall y : B a, C a y.
